fixes some form alignment

--- a/dev/scss/global/_forms.scss
+++ b/dev/scss/global/_forms.scss
@@ -24,7 +24,7 @@ textarea {
 
 input[type="submit"] {
   @include button-primary;
-  @include font-heading-regular;
+  display: block;
   margin-top: 0.75em;
 }
 
